<resources>
    <string name="app_name">Traveller\'s Point</string>
    <string name="traveller_s_point">Traveller\'s \nPoint</string>
    <string name="login_image">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="applogo">AppLogo</string>
    <string name="login_capital">LOGIN</string>
    <string name="capital_signup">SIGN UP</string>
    <string name="create_new_account">Create new account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="icon">Icon</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_roshan_welcom">Hello Roshan! \n Welcom!</string>
    <string name="username_mail">Username/Mail</string>
    <string name="username">Username</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_capital">RESET PASSWORD</string>
    <string name="confirm">CONFIRM</string>
    <string name="home">Home</string>
    <string name="posts">Posts</string>
    <string name="community">Community</string>
    <string name="website">Website</string>
    <string name="sharing">Sharing</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="roshan_0004">Roshan_0004</string>
    <string name="poojariroshan4_gmail_com">poojariroshan4@gmail.com</string>
    <string name="navigation_open">Open Navigation Drawer</string>
    <string name="navigation_close">Close Navigation Drawer</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="safety">Safety</string>
    <string name="plans">Plans</string>
    <string name="history">History</string>
    <string name="_101_likes">101 likes</string>
    <string name="source_location">Source location</string>
    <string name="save_plan">Save Plan</string>
    <string name="new_post">New post</string>
    <string name="done">DONE</string>
    <string name="enter_description">Enter your description here...</string>
    <string name="search">Search</string>
    <string name="expected_date">Expected date</string>
    <string name="departure_date">Departure date</string>
    <string name="plan_title">Plan Title</string>
    <string name="enable_safety_feature">Enable Safety Feature</string>
</resources>