<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/home_menu"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item android:id="@+id/community_menu"
            android:icon="@drawable/ic_community"
            android:title="@string/community"/>

        <item android:id="@+id/posts_menu"
            android:icon="@drawable/ic_posts"
            android:title="@string/posts"/>

        <item android:id="@+id/website_menu"
            android:icon="@drawable/ic_website"
            android:title="@string/website"/>
    </group>

    <group>
        <item android:title="@string/sharing">
            <menu>
                <group android:checkableBehavior="single">
                    <item android:id="@+id/share_menu"
                        android:icon="@drawable/ic_share"
                        android:title="@string/share"/>

                    <item android:id="@+id/feedback_menu"
                        android:icon="@drawable/ic_feedback"
                        android:title="@string/feedback"/>

                    <item android:id="@+id/about_menu"
                        android:icon="@drawable/ic_about_us"
                        android:title="@string/about_us"/>
                </group>
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/logout_menu"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"/>
    </group>
</menu>