<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetActivity"
    android:background="@drawable/loginbg1">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.8"
        android:background="@color/blue_800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/login_circle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/bg"
        android:elevation="15dp"
        app:layout_constraintVertical_bias=".03"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_launcher_foreground"
        android:elevation="16dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="@id/login_circle"
        app:layout_constraintBottom_toBottomOf="@id/login_circle"
        app:layout_constraintLeft_toLeftOf="@id/login_circle"
        app:layout_constraintRight_toRightOf="@id/login_circle"
        app:tint="@color/white"
        android:contentDescription="@string/applogo" />

    <View
        android:id="@+id/login_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.6"
        android:background="@drawable/upper_round_corner"
        android:backgroundTint="@color/blue_800"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:paddingStart="15dp"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintBottom_toBottomOf="@id/login_container"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toTopOf="@id/login_container" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:paddingStart="35dp"
        android:paddingEnd="10dp"
        android:background="@drawable/edit_text"
        android:hint="@string/username_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:enabled="false"
        android:textSize="18sp"
        android:longClickable="false"
        android:maxLength="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toTopOf="@+id/login_container"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintWidth_percent=".87" />

    <ImageView
        android:id="@+id/contact_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_verified_user"
        app:layout_constraintBottom_toBottomOf="@id/input_username"
        app:layout_constraintHorizontal_bias=".04"
        app:layout_constraintLeft_toLeftOf="@id/input_username"
        app:layout_constraintRight_toRightOf="@id/input_username"
        app:layout_constraintTop_toTopOf="@id/input_username" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:paddingStart="35dp"
        android:paddingEnd="10dp"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textIsSelectable="false"
        android:longClickable="false"
        android:maxLength="50"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@+id/input_username"
        app:layout_constraintVertical_bias="0.068"
        app:layout_constraintWidth_percent=".87"
        tools:ignore="TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_password"
        app:layout_constraintHorizontal_bias=".04"
        app:layout_constraintLeft_toLeftOf="@id/input_password"
        app:layout_constraintBottom_toBottomOf="@id/input_password"
        app:layout_constraintTop_toTopOf="@id/input_password"
        app:layout_constraintRight_toRightOf="@id/input_password"
        android:contentDescription="@string/icon" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:paddingStart="35dp"
        android:paddingEnd="10dp"
        android:background="@drawable/edit_text"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        android:textIsSelectable="false"
        android:longClickable="false"
        android:maxLength="50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"
        app:layout_constraintTop_toBottomOf="@+id/input_password"
        app:layout_constraintVertical_bias="0.08"
        app:layout_constraintWidth_percent=".87"
        tools:ignore="TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/conf_password_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_password"
        app:layout_constraintHorizontal_bias=".04"
        app:layout_constraintLeft_toLeftOf="@id/confirm_password"
        app:layout_constraintBottom_toBottomOf="@id/confirm_password"
        app:layout_constraintTop_toTopOf="@id/confirm_password"
        app:layout_constraintRight_toRightOf="@id/confirm_password"
        android:contentDescription="@string/icon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confrim_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:elevation="10dp"
        android:background="@drawable/button_bg"
        app:layout_constraintVertical_bias=".45"
        app:layout_constraintWidth_percent=".87"
        app:layout_constraintTop_toBottomOf="@id/confirm_password"
        app:layout_constraintBottom_toBottomOf="@id/login_container"
        app:layout_constraintLeft_toLeftOf="@id/login_container"
        app:layout_constraintRight_toRightOf="@id/login_container"/>

</androidx.constraintlayout.widget.ConstraintLayout>