<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <ViewFlipper
        android:id="@+id/bgScroll"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:autoStart="true"
        android:inAnimation="@anim/slide_in_right"
        android:outAnimation="@android:anim/slide_out_right"
        android:flipInterval="5000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:id="@+id/dbBg"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:alpha="0.6"
            android:scaleType="centerCrop"
            android:src="@drawable/loginbg2"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/dbBg1"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:alpha="0.6"
            android:scaleType="centerCrop"
            android:src="@drawable/loginbg2"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/dbBg2"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:alpha="0.6"
            android:scaleType="centerCrop"
            android:src="@drawable/loginbg2"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/dbBg3"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:alpha="0.6"
            android:scaleType="centerCrop"
            android:src="@drawable/loginbg2"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/dbBg4"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:alpha="0.6"
            android:scaleType="centerCrop"
            android:src="@drawable/loginbg2"
            tools:ignore="ContentDescription"/>

    </ViewFlipper>

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_roshan_welcom"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/bgScroll"
        app:layout_constraintStart_toStartOf="@id/bgScroll"
        app:layout_constraintBottom_toBottomOf="@id/bgScroll"
        app:layout_constraintEnd_toEndOf="@id/bgScroll"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintVertical_bias="0.1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/community"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                app:cardElevation="8dp"
                android:alpha="0.8"
                app:cardCornerRadius="15dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_gradient">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/community_card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="20dp"
                        android:layout_above="@id/community_text"
                        app:srcCompat="@drawable/community_card"/>

                    <TextView
                        android:id="@+id/community_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/community"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/plans"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                app:cardElevation="8dp"
                android:alpha="0.8"
                app:cardCornerRadius="15dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_gradient">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/plans_card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="20dp"
                        android:layout_above="@id/plans_text"
                        app:srcCompat="@drawable/plans_card"/>

                    <TextView
                        android:id="@+id/plans_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plans"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/history"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                app:cardElevation="8dp"
                android:alpha="0.8"
                app:cardCornerRadius="15dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_gradient">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/history_card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="20dp"
                        android:layout_above="@id/history_text"
                        app:srcCompat="@drawable/history_card"/>

                    <TextView
                        android:id="@+id/history_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/history"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/safety"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:alpha="0.8"
                app:cardElevation="8dp"
                app:cardCornerRadius="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_gradient">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/safety_card"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="20dp"
                        android:layout_above="@id/safety_text"
                        app:srcCompat="@drawable/safety_card"/>

                    <TextView
                        android:id="@+id/safety_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/safety"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_margin="10dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>